# range2cidr

./: .gitignore  CHANGELOG.md  HACKING.md  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  bootstrap.sh  config.h.in  configure  configure.ac  range2cidr.cpp
.chglog/: config.yml
.github/workflows/: codeql-analysis.yml  create-release.yml
build-aux/: git-dist.mk  git-version-gen
debian/: README.source  changelog  control  copyright  range2cidr.1  range2cidr.doc-base  range2cidr.docs  range2cidr.manpages  rules  watch
docs/: range2cidr.1
man/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  global.h  range2cidr.cpp  verbose.cpp  verbose.h
